--- a/public/index.html
+++ b/public/index.html
@@ -806,13 +806,13 @@
     // 重置狀態
     PRICING_STATE = { items: [], total: 0 };
 
-    const addLine = (category, name, qty, desc, rawPrice) => {
-      const amt = R(rawPrice);
-      if (amt <= 0) return 0;
-      PRICING_STATE.items.push({ category, name, qty, desc, amount: amt });
-      PRICING_STATE.total += amt;
-      return amt;
-    };
+const addLine = (category, name, qty, description, rawPrice) => {
+  const amt = R(rawPrice);
+  if (amt <= 0) return 0;
+  PRICING_STATE.items.push({ category, name, qty, description, amount: amt }); // ← 用 description
+  PRICING_STATE.total += amt;
+  return amt;
+};
 
     if (basePing < 12) {
       totalEl.textContent = money(0);
@@ -1033,7 +1033,7 @@
       let sub = 0;
       grouped[cat].forEach(it => {
         sub += it.amount;
-        wsData.push(["", it.name, it.qty, it.desc, `NT$ ${it.amount.toLocaleString()}`]);
+        wsData.push(["", it.name, it.qty, it.description, `NT$ ${it.amount.toLocaleString()}`]);
       });
       wsData.push(["", "小計", "", "", `NT$ ${sub.toLocaleString()}`]);
       wsData.push([]);
@@ -1099,7 +1099,7 @@
         category: String(it.category || ''),
         name:     String(it.name || ''),
         qty:      Number(it.qty || 0),
-        desc:     String(it.desc || ''),
+        description: String(it.description || ''), 
         amount:   _toInt(it.amount || 0)
       }));
 
