--- a/public/history.html
+++ b/public/history.html
@@ -25,7 +25,6 @@
     </div>
   </div>
 
-  <!-- 篩選條件 -->
   <div class="card mb-4">
     <div class="card-body">
       <form id="filterForm" class="row g-3">
@@ -77,7 +76,6 @@
     </div>
   </div>
 
-  <!-- 統計 / 分頁 -->
   <div class="d-flex justify-content-between align-items-center mb-2">
     <div id="summary" class="text-muted">共 0 筆</div>
     <div class="btn-group">
@@ -86,7 +84,6 @@
     </div>
   </div>
 
-  <!-- 結果表 -->
   <div class="card">
     <div class="table-responsive">
       <table class="table table-hover mb-0">
@@ -171,27 +168,18 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-  // ====== 設定 ======
-  const API_LIST_PRIMARY = '/api/list-quotes';      // 我建議的列表 API
-  const API_LIST_FALLBACK = '/api/search-quotes';   // 你的既有端點（若有）
-  const API_DETAIL = '/api/quote-detail';
-
-  // ====== 共用 ======
   const state = { page: 1, limit: 20, lastResp: null, lastQuery: {} };
   const $ = (s) => document.querySelector(s);
+  const nt = (n)=> (n ?? 0).toLocaleString('zh-TW', { maximumFractionDigits: 0 });
+  const fmtMoney = (n)=> 'NT$ ' + nt(Math.round(Number(n)||0));
+  const fmtDate = (s)=> s ? String(s).slice(0,10) : '';
 
-  function nt(n){ return (Number(n) || 0).toLocaleString('zh-TW', { maximumFractionDigits: 0 }); }
-  function money(n){ return 'NT$ ' + nt(Math.round(Number(n)||0)); }
-  function d8(s){ return s ? String(s).slice(0,10) : ''; }
-
-  async function fetchJSON(url, init = {}) {
+  async function apiGetJson(url, init = {}) {
     let resp = await fetch(url, { cache: 'no-store', ...init });
+    if (resp.status === 401) resp = await fetch(url, { cache: 'no-store', ...init });
     const text = await resp.text();
-    const ok = resp.ok;
-    let data;
-    try { data = text ? JSON.parse(text) : {}; } catch { data = { message: text }; }
-    if (!ok) { const msg = data?.error || data?.message || ('HTTP ' + resp.status); throw new Error(msg); }
-    return data;
+    if (!resp.ok) throw new Error(`HTTP ${resp.status} ${text || ''}`);
+    try { return JSON.parse(text); } catch { return text; }
   }
 
   function setLoading(msg = '讀取中…') {
@@ -205,66 +193,34 @@
     const q = {
       style: $('#style').value.trim(),
       room_type: $('#room_type').value.trim(),
-      min_ping: $('#ping_min').value.trim(),
-      max_ping: $('#ping_max').value.trim(),
+      ping_min: $('#ping_min').value.trim(),
+      ping_max: $('#ping_max').value.trim(),
       from: $('#from').value.trim(),
       to: $('#to').value.trim(),
       page: state.page,
       limit: state.limit
     };
     Object.keys(q).forEach(k => { if(q[k] === '') delete q[k]; });
-    // list-quotes 用 min_ping/max_ping；search-quotes 用 ping_min/ping_max（一起帶）
-    if (q.min_ping && !q.ping_min) q.ping_min = q.min_ping;
-    if (q.max_ping && !q.ping_max) q.ping_max = q.max_ping;
     return q;
   }
 
-  // ====== 搜尋 ======
   async function search(page = 1){
     state.page = page;
     setLoading();
-
-    const q = state.lastQuery = collectQuery();
-    const sp = new URLSearchParams(q);
-
-    // 先打 list-quotes，若 404/405 才退而求其次打 search-quotes
-    let data;
-    try {
-      data = await fetchJSON(`${API_LIST_PRIMARY}?${sp.toString()}`);
-    } catch (e) {
-      if (/404|405|not found|Method/i.test(String(e.message))) {
-        data = await fetchJSON(`${API_LIST_FALLBACK}?${sp.toString()}`);
-      } else {
-        throw e;
-      }
+    try{
+      const q = state.lastQuery = collectQuery();
+      const sp = new URLSearchParams(q);
+      const data = await apiGetJson('/api/search-quotes?' + sp.toString());
+      state.lastResp = data;
+      render(data);
+    }catch(err){
+      console.error(err);
+      $('#tbody').innerHTML =
+        `<tr><td colspan="7" class="text-center text-danger py-4">查詢失敗：${err.message || err}</td></tr>`;
+      $('#summary').textContent = '共 0 筆';
     }
-
-    state.lastResp = normalizeListPayload(data, q);
-    render(state.lastResp);
   }
 
-  // 把不同 API 的回傳整理成一致格式
-  function normalizeListPayload(raw, q){
-    // 支援：
-    // - { data: [...] }
-    // - { items: [...], total, page, hasNext }
-    // - 直接回傳陣列 [...]
-    const arr = Array.isArray(raw) ? raw
-              : Array.isArray(raw?.data) ? raw.data
-              : Array.isArray(raw?.items) ? raw.items
-              : [];
-
-    const page   = Number(raw?.page || q.page || 1);
-    const limit  = Number(q.limit || 20);
-    const total  = (typeof raw?.total === 'number') ? raw.total : undefined;
-    const hasNext = (typeof raw?.hasNext === 'boolean') ? raw.hasNext
-                    : (total != null) ? (page * limit < total)
-                    : (arr.length === limit); // 粗估
-
-    return { items: arr, page, total, hasNext };
-  }
-
-  // ====== 畫面 ======
   function render(resp){
     const tbody = $('#tbody');
     if(!resp || !Array.isArray(resp.items) || resp.items.length === 0){
@@ -277,12 +233,12 @@
 
     tbody.innerHTML = resp.items.map(r => `
       <tr>
-        <td>${d8(r.quote_date || r.created_at)}</td>
+        <td>${fmtDate(r.quote_date || r.created_at)}</td>
         <td>${r.client_name ?? ''}</td>
         <td>${r.style ?? ''}</td>
         <td>${r.room_type ?? ''}</td>
         <td class="text-end">${r.base_ping ?? ''}</td>
-        <td class="text-end">${money(r.grand_total)}</td>
+        <td class="text-end">${fmtMoney(r.grand_total)}</td>
         <td>
           <button class="btn btn-sm btn-outline-info" onclick="showDetail('${r.id}')">
             <i class="fa-solid fa-eye me-1"></i>查看
@@ -301,12 +257,12 @@
   }
 
   function exportExcel(){
-    const rows = [['日期','客戶','風格','房型','坪數','總價','ID']];
     const items = state?.lastResp?.items || [];
     if(items.length === 0){ alert('沒有可匯出的資料'); return; }
+    const rows = [['日期','客戶','風格','房型','坪數','總價','ID']];
     items.forEach(r=>{
       rows.push([
-        d8(r.quote_date || r.created_at),
+        fmtDate(r.quote_date || r.created_at),
         r.client_name || '',
         r.style || '',
         r.room_type || '',
@@ -322,27 +278,22 @@
     XLSX.writeFile(wb, `歷史報價_${ts}.xlsx`);
   }
 
-  // ====== 詳情 ======
   async function showDetail(id){
     try{
-      const raw = await fetchJSON(`${API_DETAIL}?id=${encodeURIComponent(id)}`);
-      const row =
-        (raw && raw.data && (raw.data[0] || raw.data)) ? (Array.isArray(raw.data)?raw.data[0]:raw.data) :
-        (raw && raw.item) ? raw.item :
-        raw;
+      const row = await apiGetJson('/api/quote-detail?id=' + encodeURIComponent(id));
 
       const base = [
-        { label:'日期', value: d8(row.quote_date || row.created_at) },
+        { label:'日期', value: fmtDate(row.quote_date || row.created_at) },
         { label:'客戶', value: row.client_name || '' },
         { label:'地址', value: row.address || '' },
         { label:'風格', value: row.style || '' },
         { label:'房型', value: row.room_type || '' },
         { label:'坪數', value: row.base_ping ?? '' },
-        { label:'小計', value: money(row.subtotal) },
-        { label:'其他項目(10%)', value: money(row.other_items) },
-        { label:'監工費(8%)', value: money(row.supervision_fee) },
-        { label:'稅額(5%)', value: money(row.tax) },
-        { label:'總價', value: money(row.grand_total) },
+        { label:'小計', value: fmtMoney(row.subtotal) },
+        { label:'其他項目(10%)', value: fmtMoney(row.other_items) },
+        { label:'監工費(8%)', value: fmtMoney(row.supervision_fee) },
+        { label:'稅額(5%)', value: fmtMoney(row.tax) },
+        { label:'總價', value: fmtMoney(row.grand_total) },
         { label:'編號', value: row.id }
       ];
       $('#detailBase').innerHTML = base.map(b => `
@@ -353,17 +304,14 @@
           </div>
         </div>`).join('');
 
-      const list = Array.isArray(row.quote_items) ? row.quote_items
-                 : Array.isArray(row.items) ? row.items
-                 : [];
-
-      if(list.length === 0){
+      const items = Array.isArray(row.quote_items) ? row.quote_items : [];
+      if(items.length === 0){
         $('#detailItemsBody').innerHTML =
           '<tr><td colspan="5" class="text-muted text-center">無明細</td></tr>';
         $('#itemsSubtotal').textContent = 'NT$ 0';
       }else{
         let sub = 0;
-        $('#detailItemsBody').innerHTML = list.map(it=>{
+        $('#detailItemsBody').innerHTML = items.map(it=>{
           sub += Number(it.amount)||0;
           return `
             <tr>
@@ -371,10 +319,10 @@
               <td>${it.name ?? ''}</td>
               <td class="text-end">${it.qty ?? ''}</td>
               <td>${it.description ?? ''}</td>
-              <td class="text-end">${money(it.amount)}</td>
+              <td class="text-end">${fmtMoney(it.amount)}</td>
             </tr>`;
         }).join('');
-        $('#itemsSubtotal').textContent = money(sub);
+        $('#itemsSubtotal').textContent = fmtMoney(sub);
       }
 
       $('#detailForm').textContent = JSON.stringify(row.form || {}, null, 2);
@@ -382,11 +330,10 @@
       new bootstrap.Modal($('#detailModal')).show();
     }catch(err){
       console.error(err);
-      alert('讀取詳情失敗：' + (err.message || err));
+      alert(err.message || err);
     }
   }
 
-  // ====== 綁事件 ======
   document.addEventListener('DOMContentLoaded', () => {
     $('#btnSearch').addEventListener('click', ()=>search(1));
     $('#btnReset').addEventListener('click', ()=>{
@@ -397,8 +344,6 @@
     $('#btnExport').addEventListener('click', exportExcel);
     $('#prev').addEventListener('click', ()=> search(Math.max(1, state.page-1)));
     $('#next').addEventListener('click', ()=> search(state.page+1));
-
-    // 進頁就查一次
     search(1);
   });
 </script>
